--- a/services/web/static/main.css
+++ b/services/web/static/main.css
@@ -1,5 +1,6 @@
-#nodeList {
-    height: 300px;
+#queryList {
+    min-height: 300px;
+    height: calc(100vh - 700px);
 }
 
 #searchform {
@@ -82,4 +83,15 @@
     /* line-height: 1.5em !important; */
     font-family: var(--bs-font-sans-serif) !important;
 
+}
+
+/* page footer --------------------------------- */
+#footer {
+  background: #00672c;
+  height: 20px;
+  position: fixed;
+  bottom: 0px;
+  left: 0;
+  width: 100%;
+  z-index: 99;
 }
